Serious comments